# smart_home_server_lite

./: CMakeLists.txt  LICENSE  README.md  auto_build.sh  clear_build.sh
include/: AirConditioner.h  CommandHandle.h  Communication.h  Device.h  Led.h  Led_Corridor.h  Led_Room.h  Temperature.h
src/: AirConditioner.cpp  CommandHandle.cpp  Communication.cpp  Device.cpp  Led.cpp  Led_Corridor.cpp  Led_Room.cpp  Temperature.cpp  main.cpp
